--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.14.0"
@@ -7,12 +8,19 @@
   "name": "register_project",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "Proyecto Lembo",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/valenciamanuel/Lembo-Project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/valenciamanuel/Lembo-Project/issues"
+  },
+  "homepage": "https://github.com/valenciamanuel/Lembo-Project#readme"
 }
